# pico-tts

./: .gitmodules  CMakeLists.txt  install_modules.sh  settings.gradle
.circleci/: config.yml
app/: .gitignore  build.gradle
app/src/full/: AndroidManifest.xml
app/src/full/kotlin/com/svox/pico/: CheckVoiceData.kt  DownloadVoiceDataOverlay.kt  FileUtils.kt
app/src/full/kotlin/com/svox/pico/providers/: SettingsProviderOverlay.kt
gradle/wrapper/: gradle-wrapper.properties
overlays/cutils/: jstring.h
scripts/: install_modules.sh
